--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "shelljs": "^0.7.6",
     "style-loader": "^3.3.1",
     "stylus-loader": "^7.1.0",
+    "svg-sprite-loader": "^6.0.11",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
